create,edit, get specific, get all -- complete
